--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,4 @@ spring.datasource.hikari.auto-commit=false
 spring.datasource.hikari.transaction-isolation=TRANSACTION_READ_COMMITTED
 #logging.level.org.springframework=DEBUG
 #logging.level.org.hibernate=DEBUG
+#spring.profiles.active=dev
