--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=garage
 # Port sur lequel l'application Spring Boot va écouter
 server.port=8081
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=DbGarage;encrypt=true;trustServerCertificate=true
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=DbGestionGarage;encrypt=true;trustServerCertificate=true
 spring.datasource.username=sa
 spring.datasource.password=Khalil2025
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
@@ -10,8 +10,9 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 spring.datasource.hikari.minimum-idle=5
 spring.datasource.hikari.maximum-pool-size=10
-spring.datasource.hikari.auto-commit=false
+spring.datasource.hikari.auto-commit =false
 spring.datasource.hikari.transaction-isolation=TRANSACTION_READ_COMMITTED
 #logging.level.org.springframework=DEBUG
 #logging.level.org.hibernate=DEBUG
 #spring.profiles.active=dev
+#spring.resources.static-locations=classpath:/static/
