--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
         <maven.compiler.target>23</maven.compiler.target>
     </properties>
 	<dependencies>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -52,12 +53,14 @@
 			<artifactId>mssql-jdbc</artifactId>
 			<version>12.2.0.jre11</version>
 		</dependency>
+
 		<!-- Facultatif: Ajout de la dépendance HikariCP -->
 		<dependency>
 			<groupId>com.zaxxer</groupId>
 			<artifactId>HikariCP</artifactId>
 			<version>5.0.0</version>
 		</dependency>
+
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
@@ -65,20 +68,46 @@
 			<scope>provided</scope>
 			<optional>true</optional>
 		</dependency>
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+    	<!-- Spring Security -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
+		
+		<!-- JWT -->
+    	<dependency>
+        	<groupId>io.jsonwebtoken</groupId>
+	        <artifactId>jjwt-api</artifactId>
+    	    <version>0.11.5</version>
+	    </dependency>
+
+    	<dependency>
+    	    <groupId>io.jsonwebtoken</groupId>
+    	    <artifactId>jjwt-impl</artifactId>
+    	    <version>0.11.5</version>
+        	<scope>runtime</scope>
+    	</dependency>
+		
 		<dependency>
-			<groupId>io.jsonwebtoken</groupId>
-			<artifactId>jjwt</artifactId>
-			<version>0.9.1</version>
-		</dependency>
+        	<groupId>io.jsonwebtoken</groupId>
+        	<artifactId>jjwt-jackson</artifactId> <!-- utiliser Jackson comme sérialiseur -->
+	        <version>0.11.5</version>
+    	    <scope>runtime</scope>
+	    </dependency>
+
+		<!-- Pour l'encodage des mots de passe -->
+    	<dependency>
+        	<groupId>org.springframework.security</groupId>
+	        <artifactId>spring-security-crypto</artifactId>
+    	</dependency>
+
 	</dependencies>
 
 	<build>
