--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=garage
-# Port sur lequel l'application Spring Boot va écouter
+# Port sur lequel l'application Spring Boot va ï¿½couter
 server.port=8081
 spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=DbGestionGarage;encrypt=true;trustServerCertificate=true
 spring.datasource.username=sa
@@ -12,6 +12,12 @@ spring.datasource.hikari.minimum-idle=5
 spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.auto-commit =false
 spring.datasource.hikari.transaction-isolation=TRANSACTION_READ_COMMITTED
+
+jwt.secret=G4r4g3JWT2025Garage
+
+# 24 heures en millisecondes
+jwt.expiration=86400000 
+
 #logging.level.org.springframework=DEBUG
 #logging.level.org.hibernate=DEBUG
 #spring.profiles.active=dev
