--- a/pom.xml
+++ b/pom.xml
@@ -27,9 +27,9 @@
 		<url/>
 	</scm>
     <properties>
-        <java.version>21</java.version>
-        <maven.compiler.source>23</maven.compiler.source>
-        <maven.compiler.target>23</maven.compiler.target>
+        <java.version>17</java.version>
+		<maven.compiler.source>17</maven.compiler.source>
+		<maven.compiler.target>17</maven.compiler.target>
     </properties>
 	<dependencies>
 
@@ -108,6 +108,14 @@
 	        <artifactId>spring-security-crypto</artifactId>
     	</dependency>
 
+		<!--Dépendance BD HQl H2-->
+		<dependency>
+    		<groupId>com.h2database</groupId>
+  			<artifactId>h2</artifactId>
+    		<scope>test</scope>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
@@ -115,7 +123,9 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
+      			<version>3.13.0</version>
 				<configuration>
+					<release>17</release>
 					<annotationProcessorPaths>
 						<path>
 							<groupId>org.projectlombok</groupId>
