Pending changes exported from your codespace

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -12,3 +12,15 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 # Activer la console H2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+jwt.secret=devSecretGarage123
+jwt.expiration=86400000
+
+# Charset correct
+spring.http.encoding.charset=UTF-8
+spring.http.encoding.enabled=true
+spring.http.encoding.force=true
+
+# Pour ne pas générer de session côté serveur (utile avec JWT)
+server.servlet.session.persistent=false
+server.servlet.session.timeout=0
